--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.30.3",
     "react-scroll": "^1.9.3",
     "react-wrap-balancer": "^1.1.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
