--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^5.2.1",
     "h3-js": "^4.4.0",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.17.2"
+    "pg": "^8.17.2",
+    "socket.io": "^4.8.3"
   }
 }
